--- a/src/MyChaoLoveStory.csproj
+++ b/src/MyChaoLoveStory.csproj
@@ -5,6 +5,14 @@
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <Title>My Chao Love Story</Title>
+    <Authors>Baka632</Authors>
+    <Copyright>Copyright (c) 2023 Baka632</Copyright>
+    <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <Version>2.0.0.0</Version>
+    <Product>My Chao Love Story</Product>
+    <Description>My Chao Love Story</Description>
 
     <PublishAot>True</PublishAot>
     <TrimmerRemoveSymbols>true</TrimmerRemoveSymbols>
@@ -16,8 +24,5 @@
     <InvariantGlobalization>true</InvariantGlobalization>
     <MetadataUpdaterSupport>false</MetadataUpdaterSupport>
     <UseSystemResourceKeys>true</UseSystemResourceKeys>
-    <Title>My Chao Love Story</Title>
-    <Authors>Baka632</Authors>
-    <Copyright>Copyright (c) 2023 Baka632</Copyright>
   </PropertyGroup>
 </Project>
